2005-12-07  Paul Eggert  <eggert@cs.ucla.edu>

	* stat-time.m4 (gl_STAT_TIME): Add check for
	TYPEOF_STRUCT_STAT_ST_ATIM_IS_STRUCT_TIMESPEC, to fix IRIX 5.3
	porting problem reported by Georg Schwarz in
	<http://lists.gnu.org/archive/html/bug-coreutils/2005-12/msg00083.html>.

2005-12-02  Paul Eggert  <eggert@cs.ucla.edu>

	* socklen.m4 (gl_TYPE_SOCKLEN_T): Renamed from gl_SOCKLEN_T.
	Use implementation from Albert Chin, with some
	comments/corrections by Stepan Kasal and myself.
	* jm-macros.m4 (gl_MACROS): Adjust to renaming.

2005-12-01  Paul Eggert  <eggert@cs.ucla.edu>

	* regex.m4 (gl_REGEX): Check whether off_t can be used in a switch
	statement, to work around an HP-UX 10.20 compiler bug reported by
	Peter O'Gorman.

2005-12-01  Bruno Haible  <bruno@clisp.org>

	Import from gnulib.
	* mbchar.m4 (gl_MBCHAR): Check for wchar.h and wctype.h. Don't compile
	mbchar.c if they are not both present.
	* mbiter.m4 (gl_MBITER): Likewise.
	* strstr.m4 (gl_PREREQ_STRSTR): Use AC_REQUIRE.
	* strcase.m4 (gl_PREREQ_STRCASECMP): Likewise.

2005-11-30  Jim Meyering  <jim@meyering.net>

	* openat.m4 (gl_FUNC_OPENAT): Require and compile mkdirat.c.
	Require openat-priv.h.

2005-11-25  Paul Eggert  <eggert@cs.ucla.edu>

	* stdbool.m4 (AM_STDBOOL_H): Don't bother substituting HAVE__BOOL;
	no longer needed.
	(gl_STDBOOL_H): New macro, from gnulib.
	(AC_HEADER_STDBOOL): Sync with gnulib.

2005-11-20  Jim Meyering  <jim@meyering.net>

	* c.m4: Remove spurious space-before-TAB.

	* euidaccess-stat.m4 (gl_EUIDACCESS_STAT): New file/macro.
	* prereq.m4: Require gl_EUIDACCESS_STAT.

2005-11-18  Paul Eggert  <eggert@cs.ucla.edu>

	* c.m4: New file, to work around bugs in AIX cc.
	Problem reported by James Lemley.  This file can go away
	after Autoconf 2.60 comes out.

2005-11-10  Paul Eggert  <eggert@cs.ucla.edu>

	* gethrxtime.m4 (gl_PREREQ_GETHRXTIME): Don't require AC_HEADER_TIME
	or gettimeofday; no longer needed.

2005-10-30  Paul Eggert  <eggert@cs.ucla.edu>
